# kratos-layout

./: .env  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  go.mod  go.sum  openapi.yaml  protols.toml
api/greeter/: error_reason.proto  greeter.pb.go  greeter.proto  greeter_errors.pb.go  greeter_grpc.pb.go  greeter_http.pb.go  ping.proto
api/helloworld/v1/: error_reason.proto  greeter.proto
cmd/server/: main.go  wire.go  wire_gen.go
configs/: config.yaml
internal/biz/: greeter.go
internal/conf/: conf.pb.go  conf.proto
internal/data/: data.go  greeter.go
internal/server/: grpc.go  http.go
internal/service/: greeter.go
